// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": undefined,
      "children": false,
      "colon": undefined,
      "column": undefined,
      "id": "default",
      "layout": undefined,
      "size": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - default title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": undefined,
      "children": false,
      "colon": undefined,
      "column": undefined,
      "id": "default title",
      "layout": undefined,
      "size": undefined,
      "title": "Descriptions title",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.bordered: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": true,
      "children": Array [
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_one"
        >
          value one
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_two"
        >
          2
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_three"
        >
          value three
        </mockConstructor>,
      ],
      "colon": undefined,
      "column": undefined,
      "id": "properties.bordered: true",
      "layout": undefined,
      "size": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.colon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_one"
        >
          value one
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_two"
        >
          2
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_three"
        >
          value three
        </mockConstructor>,
      ],
      "colon": false,
      "column": undefined,
      "id": "properties.colon: false",
      "layout": undefined,
      "size": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.column: 2 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_one"
        >
          value one
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_two"
        >
          2
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_three"
        >
          value three
        </mockConstructor>,
      ],
      "colon": undefined,
      "column": 2,
      "id": "properties.column: 2",
      "layout": undefined,
      "size": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.items-list - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          className="{\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null]}"
          label="field_one"
          span={1}
        >
          1
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null]}"
          label="field_two"
          span={1}
        >
          2
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null]}"
          label="field_three"
          span={2}
        >
          3
        </mockConstructor>,
      ],
      "colon": undefined,
      "column": 2,
      "id": "properties.items-list",
      "layout": undefined,
      "size": undefined,
      "title": "Title",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.items-list with new lines - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          className="{\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null]}"
          label="field_one"
          span={1}
        >
          description field with 
new line 	 helps
 make better content.
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":[{\\"whiteSpace\\":\\"pre-wrap\\"},null]}"
          label="one \\\\n two;"
          span={1}
        >
          description field with 
new line 	 helps
 make better content.
        </mockConstructor>,
      ],
      "colon": undefined,
      "column": 2,
      "id": "properties.items-list with new lines",
      "layout": undefined,
      "size": undefined,
      "title": "Title",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.items-object - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_one"
        >
          value one
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_two"
        >
          2
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_three"
        >
          value three
        </mockConstructor>,
      ],
      "colon": undefined,
      "column": undefined,
      "id": "properties.items-object",
      "layout": undefined,
      "size": undefined,
      "title": "Title",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.items-object with new lines - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_one"
        >
          description one field with 
 new line 	 helps
 make better content.
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="one \\\\n two;"
        >
          description two field with 
 new line 	 helps
 make better content.
        </mockConstructor>,
      ],
      "colon": undefined,
      "column": 2,
      "id": "properties.items-object with new lines",
      "layout": undefined,
      "size": undefined,
      "title": "Title",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.items-object-object - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="one"
        >
          {"two":3}
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="four"
        >
          {"five":"six"}
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="seven"
        >
          {"eight":[9,"ten"]}
        </mockConstructor>,
      ],
      "colon": undefined,
      "column": undefined,
      "id": "properties.items-object-object",
      "layout": undefined,
      "size": undefined,
      "title": "Title",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.layout: vertical - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_one"
        >
          value one
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_two"
        >
          2
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_three"
        >
          value three
        </mockConstructor>,
      ],
      "colon": undefined,
      "column": undefined,
      "id": "properties.layout: vertical",
      "layout": "vertical",
      "size": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_one"
        >
          value one
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_two"
        >
          2
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_three"
        >
          value three
        </mockConstructor>,
      ],
      "colon": undefined,
      "column": undefined,
      "id": "properties.size: default",
      "layout": undefined,
      "size": "default",
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_one"
        >
          value one
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_two"
        >
          2
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_three"
        >
          value three
        </mockConstructor>,
      ],
      "colon": undefined,
      "column": undefined,
      "id": "properties.size: small",
      "layout": undefined,
      "size": "small",
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small, properties.bordered: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bordered": true,
      "children": Array [
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_one"
        >
          value one
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_two"
        >
          2
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_three"
        >
          value three
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_4"
        >
          value 4
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_5"
        >
          5
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"whiteSpace\\":\\"pre-wrap\\"}}"
          label="field_6"
        >
          value 6
        </mockConstructor>,
      ],
      "colon": undefined,
      "column": undefined,
      "id": "properties.size: small, properties.bordered: true",
      "layout": undefined,
      "size": "small",
      "title": undefined,
    },
    Object {},
  ],
]
`;
